--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,6 @@
 .card-panel.panel {
     border: 0;
-    background: #fff;
+    background: #adb5bd;
     min-height: 50px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     position: relative;
@@ -12,10 +12,10 @@
 }
 
 .card-panel.panel .panel-heading {
-    color: #555;
-    padding: 20px;
+    color: #1e7e34;
+    padding: 10px;
     position: relative;
-    border-bottom: 1px solid rgba(204, 204, 204, 0.35);
+    border-bottom: 1px solid #1d2124;
 }
 
 .card-panel.panel .panel-heading .ptitle {
